--- a/cmake/KokkosConfig.cmake.in
+++ b/cmake/KokkosConfig.cmake.in
@@ -71,7 +71,10 @@ endif()
 
 if(@Kokkos_ENABLE_COMPILE_AS_CMAKE_LANGUAGE@)
   if(NOT (${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES} STREQUAL ${Kokkos_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}))
-    message(WARNING "Kokkos_ENABLE_ARCH_... is not the same architecture as CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES. This can lead to problems when Kokkos and @KOKKOS_COMPILE_LANGUAGE@ code is mixed.")
+    message(
+      WARNING
+        "Kokkos_ENABLE_ARCH_... is not the same architecture as CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES. This can lead to problems when Kokkos and @KOKKOS_COMPILE_LANGUAGE@ code is mixed."
+    )
   endif()
 endif()
 
