--- a/cmake/KokkosConfig.cmake.in
+++ b/cmake/KokkosConfig.cmake.in
@@ -73,7 +73,20 @@ if(@Kokkos_ENABLE_COMPILE_AS_CMAKE_LANGUAGE@)
   if(NOT (${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES} STREQUAL ${Kokkos_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}))
     message(
       WARNING
-        "Kokkos enabled the architecture '${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}' which is not the same the  is not the same architecture as the architectures enabled in CMake "${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}'. This can lead to problems when Kokkos and @KOKKOS_COMPILE_LANGUAGE@ code is mixed."
+        "Kokkos enabled the architecture '${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}' which is not the same the  is not the same architecture as the architectures enabled in CMake "${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}'.
+        This
+        can
+        lead
+        to
+        problems
+        when
+        Kokkos
+        and
+        @KOKKOS_COMPILE_LANGUAGE@
+        code
+        is
+        mixed.
+        "
     )
   endif()
 endif()
