DO NOT MERGE only for testing if LegacyView still works fine on most archs
Signed-off-by: Jakob Bludau <bludauj@ornl.gov>

--- a/.github/workflows/continuous-integration-osx.yml
+++ b/.github/workflows/continuous-integration-osx.yml
@@ -69,6 +69,7 @@ jobs:
             -DKokkos_ENABLE_TESTS=On
             -DCMAKE_BUILD_TYPE=${{ matrix.cmake_build_type }}
             -DCMAKE_CXX_COMPILER_LAUNCHER=ccache
+            -DKokkos_ENABLE_IMPL_VIEW_LEGACY=ON
       - name: build
         run: cmake --build build --parallel $(sysctl -n hw.ncpu)
       - name: test
