--- a/example/build_cmake_installed_multilanguage/CMakeLists.txt
+++ b/example/build_cmake_installed_multilanguage/CMakeLists.txt
@@ -1,6 +1,5 @@
-# Kokkos minimally requires 3.22 right now,
-# but your project can set it higher
-cmake_minimum_required(VERSION 3.22)
+# Kokkos minimally requires 3.25.2 for cuda language
+cmake_minimum_required(VERSION 3.25.2)
 
 # Projects can safely mix languages - must have C++ support
 # Kokkos flags will only apply to C++ files
