warn for mulitlang builds too
Signed-off-by: Jakob Bludau <bludauj@ornl.gov>

--- a/cmake/KokkosConfig.cmake.in
+++ b/cmake/KokkosConfig.cmake.in
@@ -69,7 +69,7 @@ elseif(@Kokkos_ENABLE_CUDA@ AND (NOT @KOKKOS_COMPILE_LANGUAGE@ STREQUAL CUDA OR 
   unset(IS_NVCC)
 endif()
 
-if(@Kokkos_ENABLE_COMPILE_AS_CMAKE_LANGUAGE@)
+if(@Kokkos_ENABLE_COMPILE_AS_CMAKE_LANGUAGE@ OR @Kokkos_ENABLE_MULTIPLE_CMAKE_LANGUAGES@)
   if(NOT (${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES} STREQUAL ${Kokkos_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}))
     message(
       WARNING
