--- a/cmake/KokkosConfig.cmake.in
+++ b/cmake/KokkosConfig.cmake.in
@@ -71,7 +71,9 @@ endif()
 
 if(CMAKE_@KOKKOS_COMPILE_LANGUAGE@_COMPILER)
   if(@Kokkos_ENABLE_@KOKKOS_COMPILE_LANGUAGE@@ AND CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES)
-    if(NOT (${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES} STREQUAL ${Kokkos_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}))
+    if(NOT (${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES} STREQUAL ${Kokkos_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}
+           )
+    )
       message(
         WARNING
           "Kokkos enabled the architecture '${Kokkos_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}' which is not the same as the architectures enabled in CMake '${CMAKE_@KOKKOS_COMPILE_LANGUAGE@_ARCHITECTURES}' which can lead to problems when Kokkos and @KOKKOS_COMPILE_LANGUAGE@ code is mixed."
